--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "tdd",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
-  "scripts": {},
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "jest": "^26.5.2",
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.0",
+    "supertest": "^5.0.0"
   }
 }
