--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
     "jest": "^26.5.2",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0",
